--- a/Stage 1.html
+++ b/Stage 1.html
@@ -65,7 +65,7 @@
   </style>
 </head>
 <body>
-  <img src="../Satge%202/Logo%20(1).png" alt="AUD Library Logo" class="logo">
+  <img src="Logo (1).png" alt="AUD Library Logo" class="logo">
   <h1>Welcome to the AUD Library Quest!</h1>
   <p>Please watch the full video to begin your journey.</p>
   <!-- Embed your local video file -->
@@ -113,4 +113,5 @@
     }
   </script>
 </body>
+
 </html>
