--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
   </style>
 </head>
 <body>
-  <img src="Logo (1).png" alt="AUD Library Logo" class="logo">
+  <img src="Logo.png" alt="AUD Library Logo" class="logo">
   <h1>Welcome to the AUD Library Quest!</h1>
   <p>Please watch the full video to begin your journey.</p>
   <!-- Embed your local video file -->
   <video id="introVideo" controls onended="videoEnded()" onplay="preventSkip()" onpause="preventPause()" disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
-    <source src="Video1.mp4" type="video/mp4">
+    <source src="Video.mp4" type="video/mp4">
     Your browser does not support HTML5 video.
   </video>
   <div id="message" class="question-section">
@@ -115,4 +115,5 @@
 </body>
 
 </html>
+
 
