--- a/stage2.html
+++ b/stage2.html
@@ -96,7 +96,7 @@
   </style>
 </head>
 <body>
-  <img src="Logo (1).png" alt="AUD Library Logo" class="logo">
+  <img src="Logo.png" alt="AUD Library Logo" class="logo">
   <h1>Search Challenge - Stage 2</h1>
 
   <div class="card">
@@ -167,3 +167,4 @@
 </body>
 
 </html>
+
