--- a/stage3.html
+++ b/stage3.html
@@ -96,7 +96,7 @@
   </style>
 </head>
 <body>
-  <img src="Logo (1).png" alt="AUD Library Logo" class="logo">
+  <img src="Logo.png" alt="AUD Library Logo" class="logo">
   <h1>Study Zone Clue - Stage 3</h1>
 
   <div class="card">
@@ -166,4 +166,5 @@
     }
   </script>
 </body>
+
 </html>
