--- a/stage4.html
+++ b/stage4.html
@@ -126,7 +126,7 @@
   </style>
 </head>
 <body>
-  <img src="Logo (1).png" alt="AUD Library Logo" class="logo">
+  <img src="Logo.png" alt="AUD Library Logo" class="logo">
   <h1>Info Desk Challenge - Stage 4</h1>
 
   <div class="card">
@@ -243,4 +243,5 @@
     }
   </script>
 </body>
+
 </html>
