--- a/stage5.html
+++ b/stage5.html
@@ -185,7 +185,7 @@
 
   <div id="codeReveal" class="code-section">
     🎉 <span class="correct">Excellent work!</span><br>
-    Your Stage 5 master code is: <strong>"ectly"</strong><br>
+    Your Stage 5 code is: <strong>"ectly"</strong><br>
     ✏️ Write it down or memorize it for the final challenge!
   </div>
 
@@ -264,3 +264,4 @@
   </script>
 </body>
 </html>
+
