--- a/stage6.html
+++ b/stage6.html
@@ -191,7 +191,20 @@
       Quest Status: <strong>COMPLETED</strong> 🏆
     </p>
   </div>
-
+<div id="formWrap" class="form-wrap">
+    <div class="card" style="border-color:#0F98BA">
+      <h2 style="margin-top:0">📋 Final Step: Register for Your Prize</h2>
+      <div class="iframe-box">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfi_8IEWt_9SvPPGhF0tUF7DRmKT6T9jgWz2y5gSTfGdS5Qrw/viewform?embedded=true" allowfullscreen></iframe>
+      </div>
+      <p class="fallback">If the form doesn’t load on this iPad, tap the button below:</p>
+      <p><a class="btn-link" target="_blank" rel="noopener noreferrer"
+            href="https://docs.google.com/forms/d/e/1FAIpQLSfi_8IEWt_9SvPPGhF0tUF7DRmKT6T9jgWz2y5gSTfGdS5Qrw/viewform">
+            Open Form in New Tab
+         </a></p>
+    </div>
+  </div>
+  
   <script>
     let attempts = 0;
     const maxAttempts = 3;
@@ -300,3 +313,4 @@
   </script>
 </body>
 </html>
+
