--- a/stage2.html
+++ b/stage2.html
@@ -106,11 +106,11 @@
       "I hide in plain sight but know every name,<br>
       Of authors and titles that brought them fame.<br>
       To find your clue, begin your chase,<br>
-      Search for 'I am Malala' and note its place."
+      Search for <strong>'I am Malala'</strong> and note its place."
     </div>
 
     <div class="task">
-      <strong>Task:</strong> Search for the given title using the discovery tool or online catalog. Enter the author's last name to access the next clue.
+      <strong>Task: Search for the given title using the discovery tool or online catalog. <br><br>Enter the author's last name to access the next clue.</strong>
     </div>
 
     <div class="question-section">
@@ -125,8 +125,8 @@
 
   <div id="codeReveal" class="code-section">
     🎉 <span class="correct">Excellent work!</span><br>
-    Your Stage 2 code is: <strong>"did"</strong><br>
-    ✏️ Write it down or memorize it for the final challenge!
+    <strong> Your Stage 2 code is: "did" <br>
+    ✏️ Write it down or memorize it for the final challenge!</strong>
   </div>
 
   <script>
@@ -167,6 +167,7 @@
 </body>
 
 </html>
+
 
 
 
