--- a/stage2.html
+++ b/stage2.html
@@ -114,7 +114,7 @@
     </div>
 
     <div class="question-section">
-      <p><strong>Question:</strong> The authors' last names are:</p>
+      <p><strong>Question:The authors' last names are:</strong> </p>
       <button onclick="checkAnswer('christina-malala')" id="btn1">Christina and Malala</button>
       <button onclick="checkAnswer('lamb-yousafzai')" id="btn2">Lamb and Yousafzai</button>
       <button onclick="checkAnswer('none')" id="btn3">None of the above</button>
