--- a/stage3.html
+++ b/stage3.html
@@ -110,8 +110,8 @@
     </div>
 
     <div class="task">
-      <strong>The Knowledge Vault – Study Zones (Reference Shelves)</strong><br>
-      Complete the riddle by finding the missing word.
+      <strong>The Knowledge Vault – Study Zones (Reference Shelves)<br><br>
+      Complete the riddle by finding the missing word.</strong>strong>
     </div>
 
     <div class="question-section">
@@ -126,7 +126,7 @@
 
   <div id="codeReveal" class="code-section">
     🎉 <span class="correct">Excellent work!</span><br>
-    Your Stage 3 code is: <strong>"it"</strong><br>
+    <strong>Your Stage 3 code is: "it"</strong><br>
     ✏️ Write it down or memorize it for the final challenge!
   </div>
 
@@ -168,3 +168,4 @@
 </body>
 
 </html>
+
