--- a/stage3.html
+++ b/stage3.html
@@ -111,7 +111,7 @@
 
     <div class="task">
       <strong>The Knowledge Vault – Study Zones (Reference Shelves)<br><br>
-      Complete the riddle by finding the missing word.</strong>strong>
+      Complete the riddle by finding the missing word.</strong>
     </div>
 
     <div class="question-section">
@@ -168,4 +168,5 @@
 </body>
 
 </html>
+
 
