--- a/stage3.html
+++ b/stage3.html
@@ -110,8 +110,7 @@
     </div>
 
     <div class="task">
-      <strong>The Knowledge Vault – Study Zones (Reference Shelves)<br><br>
-      Complete the riddle by finding the missing word. </strong>
+      <strong> Task: Complete the riddle by finding the missing word. </strong>
     </div>
 
     <div class="question-section">
@@ -168,6 +167,7 @@
 </body>
 
 </html>
+
 
 
 
