--- a/stage5.html
+++ b/stage5.html
@@ -146,37 +146,25 @@
     <div class="card-title">🕵️ The Digital Detective</div>
 
     <div class="riddle">
-      "I'm not a book, I'm not on a shelf,<br>
-      But I help you research all by yourself.<br>
-      Choose the best tool for Psychology today—<br>
-      Is it JSTOR, MedWeb, or MLA?"
+    I am a digital storyteller, wise and grand,
+I can write poems and explain the land.
+But my memory is a web, both true and untrue,
+So you must always check my stories through.
+What am I?
     </div>
 
     <div class="task">
-      <strong>Digital Edge – Databases & Online Resources (Circulation)</strong><br>
-      Answer the multiple-choice quiz about the best database for the topic. Correct answers reveal the master code and signal game completion.
+      <strong> Task: Answer the final question to reveal the master code and signal game completion.</strong>
     </div>
 
     <div class="question-section">
-      <p><strong>Choose the best databases for Psychology research:</strong> (Select all correct answers)</p>
+      <p><strong> Choose the best digital storyteller:</strong></p>
 
-      <div class="checkbox-container">
-        <label class="checkbox-item">
-          <input type="checkbox" value="jstor" onchange="updateSelection(this)">
-          JSTOR
-        </label>
-
-        <label class="checkbox-item">
-          <input type="checkbox" value="medweb" onchange="updateSelection(this)">
-          MedWeb
-        </label>
-
-        <label class="checkbox-item">
-          <input type="checkbox" value="mla" onchange="updateSelection(this)">
-          MLA
-        </label>
-      </div>
-
+      <div class="options">
+            <button class="option" data-answer="google">A) Google</button>
+            <button class="option" data-answer="chatgpt">B) ChatGPT</button>
+            <button class="option" data-answer="grandparents">C) My grandparents</button>
+        </div>
       <button onclick="checkAnswers()" id="submitBtn">Submit Answers</button>
       <p id="feedback"></p>
       <p id="attemptsLeft" class="attempts-left"></p>
@@ -184,8 +172,8 @@
   </div>
 
   <div id="codeReveal" class="code-section">
-    🎉 <span class="correct">Excellent work!</span><br>
-    Your Stage 5 code is: <strong>"ectly"</strong><br>
+    🎉 <span class="correct">ChatGPT</span><br>
+    <strong>Your Stage 5 code is:"ectly"</strong><br>
     ✏️ Write it down or memorize it for the final challenge!
   </div>
 
@@ -264,4 +252,5 @@
   </script>
 </body>
 </html>
+
 
